--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <section class="secondary">
           <h2 class="sec2h2">Give</h2>
           <h3 class="sec3h3">Please donate to support this mission</h3>
-            <p>Any amount, big or small would be greatly appreciated and will go towards the costs of the trip itself and resourses required by the charity to operate the hospital.</p>
+            <p class="give">Any amount, big or small would be greatly appreciated and will go towards the costs of the trip itself and resourses required by the charity to operate the hospital.</p>
             <a
                   href=""
                   class="btn-1"
