--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 />
             <h3>Bread & Life International Mission Trip October 2025</h3>
             <p>
-              <p>Hi, my name is Beth and I attend Branch Community Church in Henbury, part of the Woodlands Church Family. 
+              <p class="beth">Hi, my name is Beth and I attend Branch Community Church in Henbury, part of the Woodlands Church Family. 
             I will be joining Bread & Life this October to support them on this years mission trip to Cambodia.<p>
             We are a team of medical and non medical volunteers who will be helping operate a volunteer run hospital in Phnom Penh.</p>
             <p>I need help raising the funding for the trip and also to donate to Bread & Life for purchasing important medical supplies such as medications and equipment.</p>
