--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="Travel Project"
-      ccontent="Beth's Travel Project - Travel to Bristol"
+      name="BLi Mission Trip"
+      ccontent="Bi Mission Trip"
     />
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Travel Project Homepage</title>
+    <title>BLi Mission Trip</title>
   </head>
   <body>
     <header>
@@ -81,7 +81,7 @@
              <div class="card">
                 <img
                   src="src/images/BLi-Logo-BW.png"
-                  alt="coffee number 1 frontal"
+                  alt="BLi logo"
                   class="img-responsive-4"
                 />
                 <a
@@ -95,7 +95,7 @@
             <div class="card">
                 <img
                   src="src/images/Adobe Express - file (1).png"
-                  alt="coffee number 1 frontal"
+                  alt="branch community church logo"
                   class="img-responsive-5"
                 />
                 <a
@@ -109,7 +109,7 @@
             <div class="card">
                 <img
                   src="src/images/Adobe Express - file.png"
-                  alt="The Downs Cafe frontal"
+                  alt="woodlands central logo"
                   class="img-responsive-5"
                 />
                 <a
