--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
               Beth Chatwin</a
             >, is
             <a
-              href=""
+              href="https://github.com/bethanchatwin/bli"
               target="_blank"
               >open-sourced on GitHub</a
             >
             and
-            <a href="" target="_blank"
+            <a href="https://blimissiontrip.netlify.app" target="_blank"
               >hosted on Netlify</a
             >
           </p>
